@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,16 +24,14 @@
  */
 package sun.security.ssl;
 
-import sun.security.x509.X509CertImpl;
+import sun.security.provider.X509Factory;
 
 import java.io.IOException;
-import java.lang.reflect.Array;
 import java.math.BigInteger;
 import java.net.InetAddress;
 import java.nio.ByteBuffer;
 import java.security.Principal;
 import java.security.PrivateKey;
-import java.security.cert.CertificateEncodingException;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -76,11 +74,6 @@ import javax.net.ssl.SSLSessionContext;
  * @author David Brownell
  */
 final class SSLSessionImpl extends ExtendedSSLSession {
-
-    /*
-     * we only really need a single null session
-     */
-    static final SSLSessionImpl         nullSession = new SSLSessionImpl();
 
     /*
      * The state of a single session, as described in section 7.1
@@ -132,7 +125,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
     /*
      * Use of session caches is globally enabled/disabled.
      */
-    private static boolean      defaultRejoinable = true;
+    private static final boolean defaultRejoinable = true;
 
     // server name indication
     final SNIServerName         serverNameIndication;
@@ -153,7 +146,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
      * be used either by a client or by a server, as a connection is
      * first opened and before handshaking begins.
      */
-    private SSLSessionImpl() {
+    SSLSessionImpl() {
         this.protocolVersion = ProtocolVersion.NONE;
         this.cipherSuite = CipherSuite.C_NULL;
         this.sessionId = new SessionId(false, null);
@@ -161,7 +154,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
         this.port = -1;
         this.localSupportedSignAlgs = Collections.emptySet();
         this.serverNameIndication = null;
-        this.requestedServerNames = Collections.<SNIServerName>emptyList();
+        this.requestedServerNames = Collections.emptyList();
         this.useExtendedMasterSecret = false;
         this.creationTime = System.currentTimeMillis();
         this.identificationProtocol = null;
@@ -205,8 +198,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
                 Collections.unmodifiableCollection(
                         new ArrayList<>(hc.localSupportedSignAlgs));
         this.serverNameIndication = hc.negotiatedServerName;
-        this.requestedServerNames = Collections.unmodifiableList(
-                new ArrayList<>(hc.getRequestedServerNames()));
+        this.requestedServerNames = List.copyOf(hc.getRequestedServerNames());
         if (hc.sslConfig.isClientMode) {
             this.useExtendedMasterSecret =
                 (hc.handshakeExtensions.get(
@@ -312,30 +304,23 @@ final class SSLSessionImpl extends ExtendedSSLSession {
      *     < 1 byte >
      * < 4 bytes > maximumPacketSize
      * < 4 bytes > negotiatedMaxFragSize
-    */
+     */
 
     SSLSessionImpl(HandshakeContext hc, ByteBuffer buf) throws IOException {
-        int i = 0;
-        byte[] b;
-
         boundValues = new ConcurrentHashMap<>();
         this.protocolVersion =
                 ProtocolVersion.valueOf(Short.toUnsignedInt(buf.getShort()));
 
-        if (protocolVersion.useTLS13PlusSpec()) {
-            this.sessionId = new SessionId(false, null);
-        } else {
-            // The CH session id may reset this if it's provided
-            this.sessionId = new SessionId(true,
-                    hc.sslContext.getSecureRandom());
-        }
+        // The CH session id may reset this if it's provided
+        this.sessionId = new SessionId(true,
+                hc.sslContext.getSecureRandom());
 
         this.cipherSuite =
                 CipherSuite.valueOf(Short.toUnsignedInt(buf.getShort()));
 
         // Local Supported signature algorithms
         ArrayList<SignatureScheme> list = new ArrayList<>();
-        i = Byte.toUnsignedInt(buf.get());
+        int i = Byte.toUnsignedInt(buf.get());
         while (i-- > 0) {
             list.add(SignatureScheme.valueOf(
                     Short.toUnsignedInt(buf.getShort())));
@@ -352,6 +337,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
         this.peerSupportedSignAlgs = Collections.unmodifiableCollection(list);
 
         // PSK
+        byte[] b;
         i = Short.toUnsignedInt(buf.getShort());
         if (i > 0) {
             b = new byte[i];
@@ -401,8 +387,8 @@ final class SSLSessionImpl extends ExtendedSSLSession {
             identificationProtocol = null;
         } else {
             b = new byte[i];
-            identificationProtocol =
-                    buf.get(b, 0, i).asCharBuffer().toString();
+            buf.get(b);
+            identificationProtocol = new String(b);
         }
 
         // SNI
@@ -418,7 +404,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
         // List of SNIServerName
         int len = Short.toUnsignedInt(buf.getShort());
         if (len == 0) {
-            this.requestedServerNames = Collections.<SNIServerName>emptyList();
+            this.requestedServerNames = Collections.emptyList();
         } else {
             requestedServerNames = new ArrayList<>();
             while (len > 0) {
@@ -454,10 +440,11 @@ final class SSLSessionImpl extends ExtendedSSLSession {
         // Get Peer host & port
         i = Byte.toUnsignedInt(buf.get());
         if (i == 0) {
-            this.host = new String();
+            this.host = "";
         } else {
             b = new byte[i];
-            this.host = buf.get(b).toString();
+            buf.get(b, 0, i);
+            this.host = new String(b);
         }
         this.port = Short.toUnsignedInt(buf.getShort());
 
@@ -472,7 +459,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
                 b = new byte[buf.getInt()];
                 buf.get(b);
                 try {
-                    this.peerCerts[j] = new X509CertImpl(b);
+                    this.peerCerts[j] = X509Factory.cachedGetX509Cert(b);
                 } catch (Exception e) {
                     throw new IOException(e);
                 }
@@ -493,7 +480,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
                     b = new byte[buf.getInt()];
                     buf.get(b);
                     try {
-                        this.localCerts[i] = new X509CertImpl(b);
+                        this.localCerts[i] = X509Factory.cachedGetX509Cert(b);
                     } catch (Exception e) {
                         throw new IOException(e);
                     }
@@ -505,7 +492,8 @@ final class SSLSessionImpl extends ExtendedSSLSession {
                 // Length of pre-shared key algorithm  (one byte)
                 i = buf.get();
                 b = new byte[i];
-                String alg = buf.get(b, 0, i).asCharBuffer().toString();
+                buf.get(b, 0 , i);
+                String alg = new String(b);
                 // Get length of encoding
                 i = Short.toUnsignedInt(buf.getShort());
                 // Get encoding
@@ -527,11 +515,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
 
     // Some situations we cannot provide a stateless ticket, but after it
     // has been negotiated
-    boolean isStatelessable(HandshakeContext hc) {
-        if (!hc.statelessResumption) {
-            return false;
-        }
-
+    boolean isStatelessable() {
         // If there is no getMasterSecret with TLS1.2 or under, do not resume.
         if (!protocolVersion.useTLS13PlusSpec() &&
                 getMasterSecret().getEncoded() == null) {
@@ -541,6 +525,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
             }
             return false;
         }
+
         if (boundValues != null && boundValues.size() > 0) {
             if (SSLLogger.isOn && SSLLogger.isOn("ssl,handshake")) {
                 SSLLogger.finest("There are boundValues, cannot make" +
@@ -548,6 +533,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
             }
             return false;
         }
+
         return true;
     }
 
@@ -632,8 +618,8 @@ final class SSLSessionImpl extends ExtendedSSLSession {
         // List of SNIServerName
         hos.putInt16(requestedServerNames.size());
         if (requestedServerNames.size() > 0) {
-            for (SNIServerName host : requestedServerNames) {
-                b = host.getEncoded();
+            for (SNIServerName sn : requestedServerNames) {
+                b = sn.getEncoded();
                 hos.putInt8(b.length);
                 hos.write(b, 0, b.length);
             }
@@ -917,6 +903,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
      * are currently valid in this process.  For client sessions,
      * this returns null.
      */
+    @SuppressWarnings("removal")
     @Override
     public SSLSessionContext getSessionContext() {
         /*
@@ -1015,8 +1002,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
             return true;
         }
 
-        if (obj instanceof SSLSessionImpl) {
-            SSLSessionImpl sess = (SSLSessionImpl) obj;
+        if (obj instanceof SSLSessionImpl sess) {
             return (sessionId != null) && (sessionId.equals(
                         sess.getSessionId()));
         }
@@ -1049,7 +1035,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
         // Certs are immutable objects, therefore we don't clone them.
         // But do need to clone the array, so that nothing is inserted
         // into peerCerts.
-        return (java.security.cert.Certificate[])peerCerts.clone();
+        return peerCerts.clone();
     }
 
     /**
@@ -1067,52 +1053,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
         // clone to preserve integrity of session ... caller can't
         // change record of peer identity even by accident, much
         // less do it intentionally.
-        return (localCerts == null ? null :
-            (java.security.cert.Certificate[])localCerts.clone());
-    }
-
-    /**
-     * Return the cert chain presented by the peer in the
-     * javax.security.cert format.
-     * Note: This method can be used only when using certificate-based
-     * cipher suites; using it with non-certificate-based cipher suites
-     * will throw an SSLPeerUnverifiedException.
-     *
-     * @return array of peer X.509 certs, with the peer's own cert
-     *  first in the chain, and with the "root" CA last.
-     *
-     * @deprecated This method returns the deprecated
-     *  {@code javax.security.cert.X509Certificate} type.
-     *  Use {@code getPeerCertificates()} instead.
-     */
-    @Override
-    @SuppressWarnings("removal")
-    @Deprecated(since="9", forRemoval=true)
-    public javax.security.cert.X509Certificate[] getPeerCertificateChain()
-            throws SSLPeerUnverifiedException {
-        //
-        // clone to preserve integrity of session ... caller can't
-        // change record of peer identity even by accident, much
-        // less do it intentionally.
-        //
-        if (peerCerts == null) {
-            throw new SSLPeerUnverifiedException("peer not authenticated");
-        }
-        javax.security.cert.X509Certificate[] certs;
-        certs = new javax.security.cert.X509Certificate[peerCerts.length];
-        for (int i = 0; i < peerCerts.length; i++) {
-            byte[] der = null;
-            try {
-                der = peerCerts[i].getEncoded();
-                certs[i] = javax.security.cert.X509Certificate.getInstance(der);
-            } catch (CertificateEncodingException e) {
-                throw new SSLPeerUnverifiedException(e.getMessage());
-            } catch (javax.security.cert.CertificateException e) {
-                throw new SSLPeerUnverifiedException(e.getMessage());
-            }
-        }
-
-        return certs;
+        return (localCerts == null ? null : localCerts.clone());
     }
 
     /**
@@ -1266,15 +1207,6 @@ final class SSLSessionImpl extends ExtendedSSLSession {
     public void invalidate() {
         sessionLock.lock();
         try {
-            //
-            // Can't invalidate the NULL session -- this would be
-            // attempted when we get a handshaking error on a brand
-            // new connection, with no "real" session yet.
-            //
-            if (this == nullSession) {
-                return;
-            }
-
             if (context != null) {
                 context.remove(sessionId);
                 context = null;
@@ -1379,9 +1311,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
     public String[] getValueNames() {
         ArrayList<Object> v = new ArrayList<>();
         Object securityCtx = SecureKey.getCurrentSecurityContext();
-        for (Enumeration<SecureKey> e = boundValues.keys();
-                e.hasMoreElements(); ) {
-            SecureKey key = e.nextElement();
+        for (SecureKey key : boundValues.keySet()) {
             if (securityCtx.equals(key.getSecurityContext())) {
                 v.add(key.getAppKey());
             }
@@ -1438,8 +1368,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
             }
 
             if (maximumPacketSize > 0) {
-                return (maximumPacketSize > packetSize) ?
-                        maximumPacketSize : packetSize;
+                return Math.max(maximumPacketSize, packetSize);
             }
 
             if (packetSize != 0) {
@@ -1475,8 +1404,7 @@ final class SSLSessionImpl extends ExtendedSSLSession {
             }
 
             if (negotiatedMaxFragLen > 0) {
-                return (negotiatedMaxFragLen > fragmentSize) ?
-                        negotiatedMaxFragLen : fragmentSize;
+                return Math.max(negotiatedMaxFragLen, fragmentSize);
             }
 
             if (fragmentSize != 0) {
@@ -1599,6 +1527,7 @@ class SecureKey {
     private final Object            securityCtx;
 
     static Object getCurrentSecurityContext() {
+        @SuppressWarnings("removal")
         SecurityManager sm = System.getSecurityManager();
         Object context = null;
 
