@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,6 @@
 package jdk.javadoc.internal.doclets.formats.html;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -40,19 +39,17 @@ import javax.lang.model.element.PackageElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.util.ElementFilter;
 
+import com.sun.source.doctree.DeprecatedTree;
 import com.sun.source.doctree.DocTree;
 import jdk.javadoc.doclet.DocletEnvironment.ModuleMode;
+import jdk.javadoc.internal.doclets.formats.html.markup.BodyContents;
 import jdk.javadoc.internal.doclets.formats.html.markup.ContentBuilder;
 import jdk.javadoc.internal.doclets.formats.html.markup.Entity;
 import jdk.javadoc.internal.doclets.formats.html.markup.HtmlStyle;
-import jdk.javadoc.internal.doclets.formats.html.markup.HtmlTag;
+import jdk.javadoc.internal.doclets.formats.html.markup.TagName;
 import jdk.javadoc.internal.doclets.formats.html.markup.HtmlTree;
-import jdk.javadoc.internal.doclets.formats.html.markup.Navigation;
-import jdk.javadoc.internal.doclets.formats.html.markup.Navigation.PageMode;
-import jdk.javadoc.internal.doclets.formats.html.markup.RawHtml;
-import jdk.javadoc.internal.doclets.formats.html.markup.StringContent;
-import jdk.javadoc.internal.doclets.formats.html.markup.Table;
-import jdk.javadoc.internal.doclets.formats.html.markup.TableHeader;
+import jdk.javadoc.internal.doclets.formats.html.Navigation.PageMode;
+import jdk.javadoc.internal.doclets.formats.html.markup.Text;
 import jdk.javadoc.internal.doclets.toolkit.Content;
 import jdk.javadoc.internal.doclets.toolkit.ModuleSummaryWriter;
 import jdk.javadoc.internal.doclets.toolkit.util.CommentHelper;
@@ -62,13 +59,6 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocFileIOException;
  * Class to generate file for each module contents in the right-hand frame. This will list all the
  * required modules, packages and service types for the module. A click on any of the links will update
  * the frame with the clicked element page.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
- *
- * @author Bhavesh Patel
  */
 public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryWriter {
 
@@ -86,13 +76,13 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      * Map of module elements and modifiers required by this module.
      */
     private final Map<ModuleElement, Content> requires
-            = new TreeMap<>(utils.makeModuleComparator());
+            = new TreeMap<>(comparators.makeModuleComparator());
 
     /**
      * Map of indirect modules and modifiers, transitive closure, required by this module.
      */
     private final Map<ModuleElement, Content> indirectModules
-            = new TreeMap<>(utils.makeModuleComparator());
+            = new TreeMap<>(comparators.makeModuleComparator());
 
     /**
      * Details about a package in a module.
@@ -122,51 +112,46 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     /**
      * Map of packages of this module, and details of whether they are exported or opened.
      */
-    private final Map<PackageElement, PackageEntry> packages = new TreeMap<>(utils.makePackageComparator());
+    private final Map<PackageElement, PackageEntry> packages = new TreeMap<>(utils.comparators.makePackageComparator());
 
     /**
      * Map of indirect modules (transitive closure) and their exported packages.
      */
     private final Map<ModuleElement, SortedSet<PackageElement>> indirectPackages
-            = new TreeMap<>(utils.makeModuleComparator());
+            = new TreeMap<>(comparators.makeModuleComparator());
 
     /**
      * Map of indirect modules (transitive closure) and their open packages.
      */
     private final Map<ModuleElement, SortedSet<PackageElement>> indirectOpenPackages
-            = new TreeMap<>(utils.makeModuleComparator());
+            = new TreeMap<>(comparators.makeModuleComparator());
 
     /**
      * Set of services used by the module.
      */
     private final SortedSet<TypeElement> uses
-            = new TreeSet<>(utils.makeAllClassesComparator());
+            = new TreeSet<>(comparators.makeAllClassesComparator());
 
     /**
      * Map of services used by the module and specified using @uses javadoc tag, and description.
      */
     private final Map<TypeElement, Content> usesTrees
-            = new TreeMap<>(utils.makeAllClassesComparator());
+            = new TreeMap<>(comparators.makeAllClassesComparator());
 
     /**
      * Map of services provided by this module, and set of its implementations.
      */
     private final Map<TypeElement, SortedSet<TypeElement>> provides
-            = new TreeMap<>(utils.makeAllClassesComparator());
+            = new TreeMap<>(comparators.makeAllClassesComparator());
 
     /**
      * Map of services provided by the module and specified using @provides javadoc tag, and
      * description.
      */
     private final Map<TypeElement, Content> providesTrees
-            = new TreeMap<>(utils.makeAllClassesComparator());
+            = new TreeMap<>(comparators.makeAllClassesComparator());
 
-    /**
-     * The HTML tree for main tag.
-     */
-    protected HtmlTree mainTree = HtmlTree.MAIN();
-
-    private final Navigation navBar;
+    private final BodyContents bodyContents = new BodyContents();
 
     /**
      * Constructor to construct ModuleWriter object and to generate "moduleName-summary.html" file.
@@ -178,73 +163,53 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         super(configuration, configuration.docPaths.moduleSummary(mdle));
         this.mdle = mdle;
         this.moduleMode = configuration.docEnv.getModuleMode();
-        this.navBar = new Navigation(mdle, configuration, fixedNavDiv, PageMode.MODULE, path);
         computeModulesData();
     }
 
-    /**
-     * Get the module header.
-     *
-     * @param heading the heading for the section
-     */
     @Override
     public Content getModuleHeader(String heading) {
-        HtmlTree bodyTree = getBody(getWindowTitle(mdle.getQualifiedName().toString()));
-        HtmlTree htmlTree = HtmlTree.HEADER();
-        addTop(htmlTree);
-        navBar.setDisplaySummaryModuleDescLink(!utils.getFullBody(mdle).isEmpty() && !configuration.nocomment);
-        navBar.setDisplaySummaryModulesLink(display(requires) || display(indirectModules));
-        navBar.setDisplaySummaryPackagesLink(display(packages) || display(indirectPackages)
-                || display(indirectOpenPackages));
-        navBar.setDisplaySummaryServicesLink(displayServices(uses, usesTrees) || displayServices(provides.keySet(), providesTrees));
-        navBar.setUserHeader(getUserHeaderFooter(true));
-        htmlTree.add(navBar.getContent(true));
-        bodyTree.add(htmlTree);
-        HtmlTree div = new HtmlTree(HtmlTag.DIV);
-        div.setStyle(HtmlStyle.header);
-        Content annotationContent = new HtmlTree(HtmlTag.P);
-        addAnnotationInfo(mdle, annotationContent);
-        div.add(annotationContent);
-        Content label = mdle.isOpen() && (configuration.docEnv.getModuleMode() == ModuleMode.ALL)
-                ? contents.openModuleLabel : contents.moduleLabel;
-        Content tHeading = HtmlTree.HEADING(Headings.PAGE_TITLE_HEADING, true,
-                HtmlStyle.title, label);
-        tHeading.add(Entity.NO_BREAK_SPACE);
-        Content moduleHead = new RawHtml(heading);
-        tHeading.add(moduleHead);
+        HtmlTree body = getBody(getWindowTitle(mdle.getQualifiedName().toString()));
+        var div = HtmlTree.DIV(HtmlStyle.header);
+        Content moduleHead = new ContentBuilder();
+        moduleHead.add(mdle.isOpen() && (configuration.docEnv.getModuleMode() == ModuleMode.ALL)
+                ? contents.openModuleLabel : contents.moduleLabel);
+        moduleHead.add(" ").add(heading);
+        var tHeading = HtmlTree.HEADING_TITLE(Headings.PAGE_TITLE_HEADING,
+                HtmlStyle.title, moduleHead);
         div.add(tHeading);
-        mainTree.add(div);
-        return bodyTree;
+        bodyContents.setHeader(getHeader(PageMode.MODULE, mdle))
+                .addMainContent(div);
+        return body;
     }
 
-    /**
-     * Get the content header.
-     */
+    @Override
+    protected Navigation getNavBar(PageMode pageMode, Element element) {
+        return super.getNavBar(pageMode, element)
+                .setSubNavLinks(() -> List.of(
+                        links.createLink(HtmlIds.MODULE_DESCRIPTION, contents.navDescription,
+                            !utils.getFullBody(mdle).isEmpty() && !options.noComment()),
+                        links.createLink(HtmlIds.MODULES, contents.navModules,
+                            display(requires) || display(indirectModules)),
+                        links.createLink(HtmlIds.PACKAGES, contents.navPackages,
+                            display(packages) || display(indirectPackages) || display(indirectOpenPackages)),
+                        links.createLink(HtmlIds.SERVICES, contents.navServices,
+                            displayServices(uses, usesTrees) || displayServices(provides.keySet(), providesTrees))
+                ));
+    }
+
     @Override
     public Content getContentHeader() {
-        HtmlTree div = new HtmlTree(HtmlTag.DIV);
-        div.setStyle(HtmlStyle.contentContainer);
-        return div;
+        return new ContentBuilder();
     }
 
-    /**
-     * Get the summary section header.
-     */
     @Override
-    public Content getSummaryHeader() {
-        HtmlTree ul = new HtmlTree(HtmlTag.UL);
-        ul.setStyle(HtmlStyle.blockList);
-        return ul;
+    public Content getSummariesList() {
+        return HtmlTree.UL(HtmlStyle.summaryList);
     }
 
-    /**
-     * Get the summary tree.
-     *
-     * @param summaryContentTree the content tree to be added to the summary tree.
-     */
     @Override
-    public Content getSummaryTree(Content summaryContentTree) {
-        return HtmlTree.SECTION(HtmlStyle.summary, summaryContentTree);
+    public Content getSummary(Content source) {
+        return HtmlTree.SECTION(HtmlStyle.summary, source);
     }
 
     /**
@@ -259,33 +224,33 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         // required modules.
         dependentModules.forEach((module, mod) -> {
             if (shouldDocument(module)) {
-                indirectModules.put(module, new StringContent(mod));
+                indirectModules.put(module, Text.of(mod));
             }
         });
-        (ElementFilter.requiresIn(mdle.getDirectives())).forEach((directive) -> {
+        ElementFilter.requiresIn(mdle.getDirectives()).forEach(directive -> {
             ModuleElement m = directive.getDependency();
             if (shouldDocument(m)) {
                 if (moduleMode == ModuleMode.ALL || directive.isTransitive()) {
-                    requires.put(m, new StringContent(utils.getModifiers(directive)));
-            } else {
+                    requires.put(m, Text.of(utils.getModifiers(directive)));
+                } else {
                     // For api mode, just keep the public requires in dependentModules for display of
                     // indirect packages in the "Packages" section.
                     dependentModules.remove(m);
                 }
                 indirectModules.remove(m);
-        }
+            }
         });
 
         // Get all packages if module is open or if displaying concealed modules
-        for (PackageElement pkg : utils.getModulePackageMap().getOrDefault(mdle, Collections.emptySet())) {
+        for (PackageElement pkg : utils.getModulePackageMap().getOrDefault(mdle, Set.of())) {
             if (shouldDocument(pkg) && (mdle.isOpen() || moduleMode == ModuleMode.ALL)) {
                 PackageEntry e = new PackageEntry();
                 if (mdle.isOpen()) {
-                    e.openedTo = Collections.emptySet();
+                    e.openedTo = Set.of();
                 }
                 packages.put(pkg, e);
             }
-        };
+        }
 
         // Get all exported packages for the module, using the exports directive for the module.
         for (ModuleElement.ExportsDirective directive : ElementFilter.exportsIn(mdle.getDirectives())) {
@@ -295,7 +260,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                 // Include package if in details mode, or exported to all (i.e. targetModules == null)
                 if (moduleMode == ModuleMode.ALL || targetMdles == null) {
                     PackageEntry packageEntry = packages.computeIfAbsent(p, pkg -> new PackageEntry());
-                    SortedSet<ModuleElement> mdleList = new TreeSet<>(utils.makeModuleComparator());
+                    SortedSet<ModuleElement> mdleList = new TreeSet<>(utils.comparators.makeModuleComparator());
                     if (targetMdles != null) {
                         mdleList.addAll(targetMdles);
                     }
@@ -313,7 +278,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                 // Include package if in details mode, or opened to all (i.e. targetModules == null)
                 if (moduleMode == ModuleMode.ALL || targetMdles == null) {
                     PackageEntry packageEntry = packages.computeIfAbsent(p, pkg -> new PackageEntry());
-                    SortedSet<ModuleElement> mdleList = new TreeSet<>(utils.makeModuleComparator());
+                    SortedSet<ModuleElement> mdleList = new TreeSet<>(utils.comparators.makeModuleComparator());
                     if (targetMdles != null) {
                         mdleList.addAll(targetMdles);
                     }
@@ -325,70 +290,70 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         // Get all the exported and opened packages, for the transitive closure of the module, to be displayed in
         // the indirect packages tables.
         dependentModules.forEach((module, mod) -> {
-            SortedSet<PackageElement> exportPkgList = new TreeSet<>(utils.makePackageComparator());
-            (ElementFilter.exportsIn(module.getDirectives())).forEach((directive) -> {
+            SortedSet<PackageElement> exportedPackages = new TreeSet<>(utils.comparators.makePackageComparator());
+            ElementFilter.exportsIn(module.getDirectives()).forEach(directive -> {
                 PackageElement pkg = directive.getPackage();
                 if (shouldDocument(pkg)) {
                     // Qualified exports are not displayed in API mode
                     if (moduleMode == ModuleMode.ALL || directive.getTargetModules() == null) {
-                        exportPkgList.add(pkg);
+                        exportedPackages.add(pkg);
                     }
                 }
             });
             // If none of the indirect modules have exported packages to be displayed, we should not be
             // displaying the table and so it should not be added to the map.
-            if (!exportPkgList.isEmpty()) {
-                indirectPackages.put(module, exportPkgList);
+            if (!exportedPackages.isEmpty()) {
+                indirectPackages.put(module, exportedPackages);
             }
-            SortedSet<PackageElement> openPkgList = new TreeSet<>(utils.makePackageComparator());
+            SortedSet<PackageElement> openPackages = new TreeSet<>(utils.comparators.makePackageComparator());
             if (module.isOpen()) {
-                openPkgList.addAll(utils.getModulePackageMap().getOrDefault(module, Collections.emptySet()));
+                openPackages.addAll(utils.getModulePackageMap().getOrDefault(module, Set.of()));
             } else {
-                (ElementFilter.opensIn(module.getDirectives())).forEach((directive) -> {
+                ElementFilter.opensIn(module.getDirectives()).forEach(directive -> {
                     PackageElement pkg = directive.getPackage();
                     if (shouldDocument(pkg)) {
                         // Qualified opens are not displayed in API mode
                         if (moduleMode == ModuleMode.ALL || directive.getTargetModules() == null) {
-                            openPkgList.add(pkg);
+                            openPackages.add(pkg);
                         }
                     }
                 });
             }
             // If none of the indirect modules have opened packages to be displayed, we should not be
             // displaying the table and so it should not be added to the map.
-            if (!openPkgList.isEmpty()) {
-                indirectOpenPackages.put(module, openPkgList);
+            if (!openPackages.isEmpty()) {
+                indirectOpenPackages.put(module, openPackages);
             }
         });
         // Get all the services listed as uses directive.
-        (ElementFilter.usesIn(mdle.getDirectives())).forEach((directive) -> {
+        ElementFilter.usesIn(mdle.getDirectives()).forEach(directive -> {
             TypeElement u = directive.getService();
             if (shouldDocument(u)) {
                 uses.add(u);
             }
         });
         // Get all the services and implementations listed as provides directive.
-        (ElementFilter.providesIn(mdle.getDirectives())).forEach((directive) -> {
+        ElementFilter.providesIn(mdle.getDirectives()).forEach(directive -> {
             TypeElement u = directive.getService();
             if (shouldDocument(u)) {
                 List<? extends TypeElement> implList = directive.getImplementations();
-                SortedSet<TypeElement> implSet = new TreeSet<>(utils.makeAllClassesComparator());
+                SortedSet<TypeElement> implSet = new TreeSet<>(utils.comparators.makeAllClassesComparator());
                 implSet.addAll(implList);
                 provides.put(u, implSet);
             }
         });
         // Generate the map of all services listed using @provides, and the description.
-        (utils.getBlockTags(mdle, DocTree.Kind.PROVIDES)).forEach((tree) -> {
-            TypeElement t = ch.getServiceType(configuration, tree);
+        utils.getProvidesTrees(mdle).forEach(tree -> {
+            TypeElement t = ch.getServiceType(tree);
             if (t != null) {
-                providesTrees.put(t, commentTagsToContent(tree, mdle, ch.getDescription(configuration, tree), false, true));
+                providesTrees.put(t, commentTagsToContent(mdle, ch.getDescription(tree), false, true));
             }
         });
         // Generate the map of all services listed using @uses, and the description.
-        (utils.getBlockTags(mdle, DocTree.Kind.USES)).forEach((tree) -> {
-            TypeElement t = ch.getServiceType(configuration, tree);
+        utils.getUsesTrees(mdle).forEach(tree -> {
+            TypeElement t = ch.getServiceType(tree);
             if (t != null) {
-                usesTrees.put(t, commentTagsToContent(tree, mdle, ch.getDescription(configuration, tree), false, true));
+                usesTrees.put(t, commentTagsToContent(mdle, ch.getDescription(tree), false, true));
             }
         });
     }
@@ -430,7 +395,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     private boolean displayServices(Set<TypeElement> typeElements,
                                     Map<TypeElement, Content> tagsMap) {
         return typeElements != null &&
-                typeElements.stream().anyMatch((v) -> displayServiceDirective(v, tagsMap));
+                typeElements.stream().anyMatch(v -> displayServiceDirective(v, tagsMap));
     }
 
     /*
@@ -446,28 +411,24 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      * Add the summary header.
      *
      * @param startMarker the marker comment
-     * @param markerAnchor the marker anchor for the section
      * @param heading the heading for the section
-     * @param htmltree the content tree to which the information is added
+     * @param target the content to which the information is added
      */
-    public void addSummaryHeader(Content startMarker, SectionName markerAnchor, Content heading,
-            Content htmltree) {
-        htmltree.add(startMarker);
-        htmltree.add(links.createAnchor(markerAnchor));
-        htmltree.add(HtmlTree.HEADING(Headings.ModuleDeclaration.SUMMARY_HEADING, heading));
+    public void addSummaryHeader(Content startMarker, Content heading,
+            Content target) {
+        target.add(startMarker);
+        target.add(HtmlTree.HEADING(Headings.ModuleDeclaration.SUMMARY_HEADING, heading));
     }
 
     /**
      * Get a table, with two columns.
      *
      * @param caption the table caption
-     * @param tableStyle the table style
      * @param tableHeader the table header
      * @return a content object
      */
-    private Table getTable2(Content caption, HtmlStyle tableStyle,
-            TableHeader tableHeader) {
-        return new Table(tableStyle)
+    private Table<?> getTable2(Content caption, TableHeader tableHeader) {
+        return new Table<Void>(HtmlStyle.detailsTable)
                 .setCaption(caption)
                 .setHeader(tableHeader)
                 .setColumnStyles(HtmlStyle.colFirst, HtmlStyle.colLast);
@@ -477,56 +438,41 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      * Get a table, with three columns, with the second column being the defining column.
      *
      * @param caption the table caption
-     * @param tableSummary the summary for the table
-     * @param tableStyle the table style
      * @param tableHeader the table header
      * @return a content object
      */
-    private Table getTable3(Content caption, String tableSummary, HtmlStyle tableStyle,
-            TableHeader tableHeader) {
-        return new Table(tableStyle)
+    private Table<?> getTable3(Content caption, TableHeader tableHeader) {
+        return new Table<Void>(HtmlStyle.detailsTable)
                 .setCaption(caption)
                 .setHeader(tableHeader)
-                .setRowScopeColumn(1)
                 .setColumnStyles(HtmlStyle.colFirst, HtmlStyle.colSecond, HtmlStyle.colLast);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public void addModulesSummary(Content summaryContentTree) {
+    public void addModulesSummary(Content summariesList) {
         if (display(requires) || display(indirectModules)) {
             TableHeader requiresTableHeader =
                     new TableHeader(contents.modifierLabel, contents.moduleLabel,
                             contents.descriptionLabel);
-            HtmlTree section = HtmlTree.SECTION(HtmlStyle.modulesSummary);
-            addSummaryHeader(MarkerComments.START_OF_MODULES_SUMMARY, SectionName.MODULES,
-                    contents.navModules, section);
+            var section = HtmlTree.SECTION(HtmlStyle.modulesSummary)
+                    .setId(HtmlIds.MODULES);
+            addSummaryHeader(MarkerComments.START_OF_MODULES_SUMMARY, contents.navModules, section);
             if (display(requires)) {
                 String text = resources.getText("doclet.Requires_Summary");
-                String tableSummary = resources.getText("doclet.Member_Table_Summary",
-                        text,
-                        resources.getText("doclet.modules"));
-                Content caption = getTableCaption(new StringContent(text));
-                Table table = getTable3(caption, tableSummary, HtmlStyle.requiresSummary,
-                            requiresTableHeader);
+                Content caption = Text.of(text);
+                var table = getTable3(caption, requiresTableHeader);
                 addModulesList(requires, table);
-                section.add(table.toContent());
+                section.add(table);
             }
             // Display indirect modules table in both "api" and "all" mode.
             if (display(indirectModules)) {
                 String amrText = resources.getText("doclet.Indirect_Requires_Summary");
-                String amrTableSummary = resources.getText("doclet.Member_Table_Summary",
-                        amrText,
-                        resources.getText("doclet.modules"));
-                Content amrCaption = getTableCaption(new StringContent(amrText));
-                Table amrTable = getTable3(amrCaption, amrTableSummary, HtmlStyle.requiresSummary,
-                            requiresTableHeader);
+                Content amrCaption = Text.of(amrText);
+                var amrTable = getTable3(amrCaption, requiresTableHeader);
                 addModulesList(indirectModules, amrTable);
-                section.add(amrTable.toContent());
+                section.add(amrTable);
             }
-            summaryContentTree.add(HtmlTree.LI(HtmlStyle.blockList, section));
+            summariesList.add(HtmlTree.LI(section));
         }
     }
 
@@ -536,10 +482,10 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      * @param mdleMap map of modules and modifiers
      * @param table the table to which the list will be added
      */
-    private void addModulesList(Map<ModuleElement, Content> mdleMap, Table table) {
+    private void addModulesList(Map<ModuleElement, Content> mdleMap, Table<?> table) {
         for (ModuleElement m : mdleMap.keySet()) {
             Content modifiers = mdleMap.get(m);
-            Content moduleLink = getModuleLink(m, new StringContent(m.getQualifiedName()));
+            Content moduleLink = getModuleLink(m, Text.of(m.getQualifiedName()));
             Content moduleSummary = new ContentBuilder();
             addSummaryComment(m, moduleSummary);
             table.addRow(modifiers, moduleLink, moduleSummary);
@@ -547,12 +493,12 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     }
 
     @Override
-    public void addPackagesSummary(Content summaryContentTree) {
+    public void addPackagesSummary(Content summariesList) {
         if (display(packages)
                 || display(indirectPackages) || display(indirectOpenPackages)) {
-            HtmlTree section = HtmlTree.SECTION(HtmlStyle.packagesSummary);
-            addSummaryHeader(MarkerComments.START_OF_PACKAGES_SUMMARY, SectionName.PACKAGES,
-                    contents.navPackages, section);
+            var section = HtmlTree.SECTION(HtmlStyle.packagesSummary)
+                    .setId(HtmlIds.PACKAGES);
+            addSummaryHeader(MarkerComments.START_OF_PACKAGES_SUMMARY, contents.navPackages, section);
             if (display(packages)) {
                 addPackageSummary(section);
             }
@@ -560,19 +506,17 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                     new TableHeader(contents.fromLabel, contents.packagesLabel);
             if (display(indirectPackages)) {
                 String aepText = resources.getText("doclet.Indirect_Exports_Summary");
-                Table aepTable = getTable2(new StringContent(aepText),
-                        HtmlStyle.packagesSummary, indirectPackagesHeader);
+                var aepTable = getTable2(Text.of(aepText), indirectPackagesHeader);
                 addIndirectPackages(aepTable, indirectPackages);
-                section.add(aepTable.toContent());
+                section.add(aepTable);
             }
             if (display(indirectOpenPackages)) {
                 String aopText = resources.getText("doclet.Indirect_Opens_Summary");
-                Table aopTable = getTable2(new StringContent(aopText), HtmlStyle.packagesSummary,
-                        indirectPackagesHeader);
+                var aopTable = getTable2(Text.of(aopText), indirectPackagesHeader);
                 addIndirectPackages(aopTable, indirectOpenPackages);
-                section.add(aopTable.toContent());
+                section.add(aopTable);
             }
-            summaryContentTree.add(HtmlTree.LI(HtmlStyle.blockList, section));
+            summariesList.add(HtmlTree.LI(section));
         }
     }
 
@@ -582,12 +526,12 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      * @param li
      */
     public void addPackageSummary(HtmlTree li) {
-        Table table = new Table(HtmlStyle.packagesSummary)
-                .setDefaultTab(resources.getText("doclet.All_Packages"))
-                .addTab(resources.getText("doclet.Exported_Packages_Summary"), this::isExported)
-                .addTab(resources.getText("doclet.Opened_Packages_Summary"), this::isOpened)
-                .addTab(resources.getText("doclet.Concealed_Packages_Summary"), this::isConcealed)
-                .setTabScript(i -> String.format("show(%d);", i));
+        var table = new Table<PackageElement>(HtmlStyle.summaryTable)
+                .setId(HtmlIds.PACKAGE_SUMMARY_TABLE)
+                .setDefaultTab(contents.getContent("doclet.All_Packages"))
+                .addTab(contents.getContent("doclet.Exported_Packages_Summary"), this::isExported)
+                .addTab(contents.getContent("doclet.Opened_Packages_Summary"), this::isOpened)
+                .addTab(contents.getContent("doclet.Concealed_Packages_Summary"), this::isConcealed);
 
         // Determine whether to show the "Exported To" and "Opened To" columns,
         // based on whether such columns would provide "useful" info.
@@ -641,7 +585,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
             PackageElement pkg = e.getKey();
             PackageEntry entry = e.getValue();
             List<Content> row = new ArrayList<>();
-            Content pkgLinkContent = getPackageLink(pkg, new StringContent(utils.getPackageName(pkg)));
+            Content pkgLinkContent = getPackageLink(pkg, getLocalizedPackageName(pkg));
             row.add(pkgLinkContent);
 
             if (showExportedTo) {
@@ -651,16 +595,14 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                 row.add(getPackageExportOpensTo(entry.openedTo));
             }
             Content summary = new ContentBuilder();
+            addPreviewSummary(pkg, summary);
             addSummaryComment(pkg, summary);
             row.add(summary);
 
             table.addRow(pkg, row);
         }
 
-        li.add(table.toContent());
-        if (table.needsScript()) {
-            mainBodyScript.append(table.getScript());
-        }
+        li.add(table);
     }
 
     private boolean isExported(Element e) {
@@ -680,16 +622,16 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
 
     private Content getPackageExportOpensTo(Set<ModuleElement> modules) {
         if (modules == null) {
-            return new StringContent(resources.getText("doclet.None"));
+            return contents.getContent("doclet.None");
         } else if (modules.isEmpty()) {
-            return new StringContent(resources.getText("doclet.All_Modules"));
+            return contents.getContent("doclet.All_Modules");
         } else {
             Content list = new ContentBuilder();
             for (ModuleElement m : modules) {
                 if (!list.isEmpty()) {
-                    list.add(new StringContent(", "));
+                    list.add(Text.of(", "));
                 }
-                list.add(getModuleLink(m, new StringContent(m.getQualifiedName())));
+                list.add(getModuleLink(m, Text.of(m.getQualifiedName())));
             }
             return list;
         }
@@ -701,56 +643,51 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      * @param table the table to which the content rows will be added
      * @param ip indirect packages to be added
      */
-    public void addIndirectPackages(Table table, Map<ModuleElement, SortedSet<PackageElement>> ip) {
+    public void addIndirectPackages(Table<?> table, Map<ModuleElement, SortedSet<PackageElement>> ip) {
         for (Map.Entry<ModuleElement, SortedSet<PackageElement>> entry : ip.entrySet()) {
             ModuleElement m = entry.getKey();
             SortedSet<PackageElement> pkgList = entry.getValue();
-            Content moduleLinkContent = getModuleLink(m, new StringContent(m.getQualifiedName()));
+            Content moduleLinkContent = getModuleLink(m, Text.of(m.getQualifiedName()));
             Content list = new ContentBuilder();
             String sep = "";
             for (PackageElement pkg : pkgList) {
                 list.add(sep);
-                list.add(getPackageLink(pkg, new StringContent(utils.getPackageName(pkg))));
+                list.add(getPackageLink(pkg, getLocalizedPackageName(pkg)));
                 sep = " ";
             }
             table.addRow(moduleLinkContent, list);
         }
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public void addServicesSummary(Content summaryContentTree) {
+    public void addServicesSummary(Content summariesList) {
 
         boolean haveUses = displayServices(uses, usesTrees);
         boolean haveProvides = displayServices(provides.keySet(), providesTrees);
 
         if (haveProvides || haveUses) {
-            HtmlTree section = HtmlTree.SECTION(HtmlStyle.servicesSummary);
-            addSummaryHeader(MarkerComments.START_OF_SERVICES_SUMMARY, SectionName.SERVICES,
-                    contents.navServices, section);
+            var section = HtmlTree.SECTION(HtmlStyle.servicesSummary)
+                    .setId(HtmlIds.SERVICES);
+            addSummaryHeader(MarkerComments.START_OF_SERVICES_SUMMARY, contents.navServices, section);
             TableHeader usesProvidesTableHeader =
                     new TableHeader(contents.typeLabel, contents.descriptionLabel);
             if (haveProvides) {
                 String label = resources.getText("doclet.Provides_Summary");
-                Table table = getTable2(new StringContent(label), HtmlStyle.providesSummary,
-                        usesProvidesTableHeader);
+                var table = getTable2(Text.of(label), usesProvidesTableHeader);
                 addProvidesList(table);
                 if (!table.isEmpty()) {
-                    section.add(table.toContent());
+                    section.add(table);
                 }
             }
             if (haveUses){
                 String label = resources.getText("doclet.Uses_Summary");
-                Table table = getTable2(new StringContent(label), HtmlStyle.usesSummary,
-                        usesProvidesTableHeader);
+                var table = getTable2(Text.of(label), usesProvidesTableHeader);
                 addUsesList(table);
                 if (!table.isEmpty()) {
-                    section.add(table.toContent());
+                    section.add(table);
                 }
             }
-            summaryContentTree.add(HtmlTree.LI(HtmlStyle.blockList, section));
+            summariesList.add(HtmlTree.LI(section));
         }
     }
 
@@ -759,14 +696,14 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      *
      * @param table the table to which the services used will be added
      */
-    public void addUsesList(Table table) {
+    public void addUsesList(Table<?> table) {
         Content typeLinkContent;
         Content description;
         for (TypeElement t : uses) {
             if (!displayServiceDirective(t, usesTrees)) {
                 continue;
             }
-            typeLinkContent = getLink(new LinkInfoImpl(configuration, LinkInfoImpl.Kind.PACKAGE, t));
+            typeLinkContent = getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.PACKAGE, t));
             Content summary = new ContentBuilder();
             if (display(usesTrees)) {
                 description = usesTrees.get(t);
@@ -787,7 +724,7 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
      *
      * @param table the table to which the services provided will be added
      */
-    public void addProvidesList(Table table) {
+    public void addProvidesList(Table<?> table) {
         SortedSet<TypeElement> implSet;
         Content description;
         for (Map.Entry<TypeElement, SortedSet<TypeElement>> entry : provides.entrySet()) {
@@ -796,27 +733,29 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
                 continue;
             }
             implSet = entry.getValue();
-            Content srvLinkContent = getLink(new LinkInfoImpl(configuration, LinkInfoImpl.Kind.PACKAGE, srv));
+            Content srvLinkContent = getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.PACKAGE, srv));
             Content desc = new ContentBuilder();
             if (display(providesTrees)) {
                 description = providesTrees.get(srv);
-                desc.add((description != null && !description.isEmpty())
-                        ? HtmlTree.DIV(HtmlStyle.block, description)
-                        : Entity.NO_BREAK_SPACE);
+                if (description != null && !description.isEmpty()) {
+                    desc.add(HtmlTree.DIV(HtmlStyle.block, description));
+                } else {
+                    addSummaryComment(srv, desc);
+                }
             } else {
                 desc.add(Entity.NO_BREAK_SPACE);
-                }
+            }
             // Only display the implementation details in the "all" mode.
             if (moduleMode == ModuleMode.ALL && !implSet.isEmpty()) {
-                desc.add(new HtmlTree(HtmlTag.BR));
+                desc.add(new HtmlTree(TagName.BR));
                 desc.add("(");
-                HtmlTree implSpan = HtmlTree.SPAN(HtmlStyle.implementationLabel, contents.implementation);
+                var implSpan = HtmlTree.SPAN(HtmlStyle.implementationLabel, contents.implementation);
                 desc.add(implSpan);
                 desc.add(Entity.NO_BREAK_SPACE);
                 String sep = "";
                 for (TypeElement impl : implSet) {
                     desc.add(sep);
-                    desc.add(getLink(new LinkInfoImpl(configuration, LinkInfoImpl.Kind.PACKAGE, impl)));
+                    desc.add(getLink(new HtmlLinkInfo(configuration, HtmlLinkInfo.Kind.PACKAGE, impl)));
                     sep = ", ";
                 }
                 desc.add(")");
@@ -828,18 +767,17 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
     /**
      * Add the module deprecation information to the documentation tree.
      *
-     * @param div the content tree to which the deprecation information will be added
+     * @param div the content to which the deprecation information will be added
      */
     public void addDeprecationInfo(Content div) {
-        List<? extends DocTree> deprs = utils.getBlockTags(mdle, DocTree.Kind.DEPRECATED);
+        List<? extends DeprecatedTree> deprs = utils.getDeprecatedTrees(mdle);
         if (utils.isDeprecated(mdle)) {
             CommentHelper ch = utils.getCommentHelper(mdle);
-            HtmlTree deprDiv = new HtmlTree(HtmlTag.DIV);
-            deprDiv.setStyle(HtmlStyle.deprecationBlock);
-            Content deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(mdle));
+            var deprDiv = HtmlTree.DIV(HtmlStyle.deprecationBlock);
+            var deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(mdle));
             deprDiv.add(deprPhrase);
             if (!deprs.isEmpty()) {
-                List<? extends DocTree> commentTags = ch.getDescription(configuration, deprs.get(0));
+                List<? extends DocTree> commentTags = ch.getDescription(deprs.get(0));
                 if (!commentTags.isEmpty()) {
                     addInlineDeprecatedComment(mdle, deprs.get(0), deprDiv);
                 }
@@ -848,80 +786,58 @@ public class ModuleWriterImpl extends HtmlDocletWriter implements ModuleSummaryW
         }
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public void addModuleDescription(Content moduleContentTree) {
+    public void addModuleDescription(Content moduleContent) {
+        addPreviewInfo(mdle, moduleContent);
         if (!utils.getFullBody(mdle).isEmpty()) {
-            Content tree = HtmlTree.SECTION(HtmlStyle.moduleDescription);
+            var tree = HtmlTree.SECTION(HtmlStyle.moduleDescription)
+                    .setId(HtmlIds.MODULE_DESCRIPTION);
             addDeprecationInfo(tree);
             tree.add(MarkerComments.START_OF_MODULE_DESCRIPTION);
-            tree.add(links.createAnchor(SectionName.MODULE_DESCRIPTION));
             addInlineComment(mdle, tree);
-            moduleContentTree.add(tree);
+            addTagsInfo(mdle, tree);
+            moduleContent.add(tree);
         }
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public void addModuleTags(Content moduleContentTree) {
-        Content tree = HtmlTree.SECTION(HtmlStyle.moduleTags);
-        addTagsInfo(mdle, tree);
-        moduleContentTree.add(tree);
+    public void addModuleSignature(Content moduleContent) {
+        moduleContent.add(new HtmlTree(TagName.HR));
+        moduleContent.add(Signatures.getModuleSignature(mdle, this));
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public void addModuleContent(Content contentTree, Content moduleContentTree) {
-        mainTree.add(moduleContentTree);
-        contentTree.add(mainTree);
+    public void addModuleContent(Content source) {
+        bodyContents.addMainContent(source);
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
-    public void addModuleFooter(Content contentTree) {
-        Content htmlTree = HtmlTree.FOOTER();
-        navBar.setUserFooter(getUserHeaderFooter(false));
-        htmlTree.add(navBar.getContent(false));
-        addBottom(htmlTree);
-        contentTree.add(htmlTree);
+    public void addModuleFooter() {
+        bodyContents.setFooter(getFooter());
     }
 
-    /**
-     * {@inheritDoc}
-     *
-     * @throws jdk.javadoc.internal.doclets.toolkit.util.DocFileIOException
-     */
     @Override
-    public void printDocument(Content contentTree) throws DocFileIOException {
+    public void printDocument(Content content) throws DocFileIOException {
+        content.add(bodyContents);
         printHtmlDocument(configuration.metakeywords.getMetaKeywordsForModule(mdle),
-                getDescription("declaration", mdle), getLocalStylesheets(mdle), contentTree);
+                getDescription("declaration", mdle), getLocalStylesheets(mdle), content);
     }
 
     /**
      * Add the module package deprecation information to the documentation tree.
      *
-     * @param li the content tree to which the deprecation information will be added
+     * @param li the content to which the deprecation information will be added
      * @param pkg the PackageDoc that is added
      */
     public void addPackageDeprecationInfo(Content li, PackageElement pkg) {
-        List<? extends DocTree> deprs;
         if (utils.isDeprecated(pkg)) {
-            deprs = utils.getDeprecatedTrees(pkg);
-            HtmlTree deprDiv = new HtmlTree(HtmlTag.DIV);
-            deprDiv.setStyle(HtmlStyle.deprecationBlock);
-            Content deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(pkg));
+            List<? extends DeprecatedTree> deprs = utils.getDeprecatedTrees(pkg);
+            var deprDiv = HtmlTree.DIV(HtmlStyle.deprecationBlock);
+            var deprPhrase = HtmlTree.SPAN(HtmlStyle.deprecatedLabel, getDeprecatedPhrase(pkg));
             deprDiv.add(deprPhrase);
             if (!deprs.isEmpty()) {
                 CommentHelper ch = utils.getCommentHelper(pkg);
-                List<? extends DocTree> commentTags = ch.getDescription(configuration, deprs.get(0));
+                List<? extends DocTree> commentTags = ch.getDescription(deprs.get(0));
                 if (!commentTags.isEmpty()) {
                     addInlineDeprecatedComment(pkg, deprs.get(0), deprDiv);
                 }
