@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,8 +28,8 @@ package jdk.javadoc.internal.doclets.formats.html.markup;
 import java.io.IOException;
 import java.io.Writer;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 
 import jdk.javadoc.internal.doclets.toolkit.Content;
 
@@ -37,7 +37,7 @@ import jdk.javadoc.internal.doclets.toolkit.Content;
  * A sequence of Content nodes.
  */
 public class ContentBuilder extends Content {
-    protected List<Content> contents = Collections.emptyList();
+    protected List<Content> contents = List.of();
 
     public ContentBuilder() { }
 
@@ -48,34 +48,37 @@ public class ContentBuilder extends Content {
     }
 
     @Override
-    public void add(Content content) {
-        nullCheck(content);
+    public ContentBuilder add(Content content) {
+        Objects.requireNonNull(content);
         ensureMutableContents();
-        if (content instanceof ContentBuilder) {
-            contents.addAll(((ContentBuilder) content).contents);
-        } else
-            contents.add(content);
-    }
-
-    @Override
-    public void add(CharSequence text) {
-        if (text.length() == 0)
-            return;
-        ensureMutableContents();
-        Content c = contents.isEmpty() ? null : contents.get(contents.size() - 1);
-        StringContent sc;
-        if (c != null && c instanceof StringContent) {
-            sc = (StringContent) c;
+        if (content instanceof ContentBuilder cb) {
+            contents.addAll(cb.contents);
         } else {
-            contents.add(sc = new StringContent());
+            contents.add(content);
         }
-        sc.add(text);
+        return this;
     }
 
     @Override
-    public boolean write(Writer writer, boolean atNewline) throws IOException {
+    public ContentBuilder add(CharSequence text) {
+        if (text.length() > 0) {
+            ensureMutableContents();
+            Content c = contents.isEmpty() ? null : contents.get(contents.size() - 1);
+            TextBuilder tb;
+            if (c instanceof TextBuilder tbi) {
+                tb = tbi;
+            } else {
+                contents.add(tb = new TextBuilder());
+            }
+            tb.add(text);
+        }
+        return this;
+    }
+
+    @Override
+    public boolean write(Writer writer, String newline, boolean atNewline) throws IOException {
         for (Content content: contents) {
-            atNewline = content.write(writer, atNewline);
+            atNewline = content.write(writer, newline, atNewline);
         }
         return atNewline;
     }
